--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -10,4 +10,13 @@
   body {
     @apply font-primary bg-primary text-white leading-loose;
   }
+  .h1-name{
+    @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold ;
+  }
+  .h2-name{
+    @apply text-[36px] xl:text-[48px] leading-[1.1] font-semibold ;
+  }
+  .h3-name{
+    @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold ;
+  }
 }
