--- a/app/globals.css
+++ b/app/globals.css
@@ -8,9 +8,9 @@
 
 @layer base {
   body {
-    @apply font-primary bg-primary text-white leading-loose;
+    @apply font-primary bg-primary text-white leading-loose w-full;
   }
-  .h1-name{
+  .h1{
     @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold ;
   }
   .h2-name{
