complete service page

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
   .h1{
     @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold ;
   }
-  .h2-name{
+  .h2{
     @apply text-[36px] xl:text-[48px] leading-[1.1] font-semibold ;
   }
   .h3-name{
